--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,49 @@
+# Ignore node_modules in both frontend and backend
+frontend/node_modules/
+backend/node_modules/
 frontend.nosync/node_modules/*
-
 backend.nosync/node_modules/*
+# Ignore environment variable files
+frontend/.env
+frontend/.env.*
+backend/.env
+backend/.env.*
+
+# Ignore logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Ignore build artifacts
+frontend/build/
+frontend/dist/
+backend/dist/
+
+# Ignore coverage reports
+coverage/
+frontend/coverage/
+backend/coverage/
+
+# OS/system files
+.DS_Store
+Thumbs.db
+
+# IDE/editor files
+.vscode/
+.idea/
+*.swp
+
+# Lock files (optional, based on your team policy)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# Optional: Mac system metadata
+.AppleDouble
+.LSOverride
+
+# Temporary files
+*.tmp
+*.temp
