--- a/frontend.nosync/package.json
+++ b/frontend.nosync/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^7.6.3",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
@@ -16,11 +16,22 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
     "ajv": "^6.12.6",
