--- a/backend.nosync/package.json
+++ b/backend.nosync/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "react-share": "^5.2.2",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
