--- a/frontend.nosync/package.json
+++ b/frontend.nosync/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^18.0.2",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-share": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
