--- a/frontend.nosync/package.json
+++ b/frontend.nosync/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "framer-motion": "^12.23.12",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-hot-toast": "^2.5.2",
