--- a/frontend.nosync/package.json
+++ b/frontend.nosync/package.json
@@ -6,6 +6,7 @@
     "framer-motion": "^12.23.12",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
