iframe for Poll Sharing

--- a/frontend.nosync/package.json
+++ b/frontend.nosync/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.544.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-helmet-async": "^2.0.5",
